src/OpenCvSharpExtern/face_Facemark.h

struct FacemarkKazemiParamsData
{
    uint64_t cascade_depth;
    uint64_t tree_depth;
    uint64_t num_trees_per_cascade_level;
    float learning_rate;
    uint64_t oversampling_amount;
    uint64_t num_test_coordinates;
    float lambda;
    uint64_t num_test_splits;
};
// userData is a GCHandle to the managed context rooting the real detector delegate (see
// FacemarkFaceDetectorBridge), round-tripped opaquely - this native layer never dereferences it.
typedef int (*FacemarkFaceDetectorCallback)(void *userData, cv::Mat *image, interop::Rect *faces, int capacity);
struct FacemarkFaceDetectorCallbackData
{
    FacemarkFaceDetectorCallback callback;
    void *userData;
};
static bool face_Facemark_faceDetectorThunk(
    cv::InputArray image, cv::OutputArray faces, void *userData)
{
    const auto data = static_cast<FacemarkFaceDetectorCallbackData *>(userData);
    if (data == nullptr || data->callback == nullptr)
        return false;
    auto imageMat = image.getMat();
    const auto count = data->callback(data->userData, &imageMat, nullptr, 0);
    if (count < 0)
        return false;
    if (count == 0)
    {
        faces.release();
        return true;
    }
    std::vector<interop::Rect> interopFaces(count);
    const auto written = data->callback(data->userData, &imageMat, interopFaces.data(), count);
    if (written != count)
        return false;
    std::vector<cv::Rect> nativeFaces(count);
    for (auto i = 0; i < count; i++)
        nativeFaces[i] = cpp(interopFaces[i]);
    cv::Mat(nativeFaces).copyTo(faces);
    return true;
}
CVAPI(ExceptionStatus) face_FacemarkFaceDetectorCallbackData_delete(
    FacemarkFaceDetectorCallbackData *data)
{
    return cvTry([&] { delete data; });
}
CVAPI(ExceptionStatus) face_FacemarkKazemi_setFaceDetector(
    cv::face::FacemarkKazemi *obj,
    const FacemarkFaceDetectorCallback callback,
    void *userData,
    FacemarkFaceDetectorCallbackData **callbackData,
    int *returnValue)
{
    return cvTry([&] {
        const auto data = new FacemarkFaceDetectorCallbackData { callback, userData };
        if (!obj->setFaceDetector(face_Facemark_faceDetectorThunk, data))
        {
            delete data;
            *callbackData = nullptr;
            *returnValue = 0;
            return;
        }
        *callbackData = data;
        *returnValue = 1;
    });
}
CVAPI(ExceptionStatus) face_FacemarkKazemi_Params_new(
    cv::face::FacemarkKazemi::Params **returnValue)
{
    return cvTry([&] { *returnValue = new cv::face::FacemarkKazemi::Params; });
}
CVAPI(ExceptionStatus) face_FacemarkKazemi_Params_delete(
    cv::face::FacemarkKazemi::Params *obj)
{
    return cvTry([&] { delete obj; });
}
CVAPI(ExceptionStatus) face_FacemarkKazemi_Params_getAll(
    cv::face::FacemarkKazemi::Params *obj,
    FacemarkKazemiParamsData *data,
    std::string *configFile)
{
    return cvTry([&] {
        data->cascade_depth = obj->cascade_depth;
        data->tree_depth = obj->tree_depth;
        data->num_trees_per_cascade_level = obj->num_trees_per_cascade_level;
        data->learning_rate = obj->learning_rate;
        data->oversampling_amount = obj->oversampling_amount;
        data->num_test_coordinates = obj->num_test_coordinates;
        data->lambda = obj->lambda;
        data->num_test_splits = obj->num_test_splits;
        configFile->assign(obj->configfile);
    });
}
CVAPI(ExceptionStatus) face_FacemarkKazemi_Params_setAll(
    cv::face::FacemarkKazemi::Params *obj,
    const FacemarkKazemiParamsData data,
    const char *configFile)
{
    return cvTry([&] {
        obj->cascade_depth = static_cast<unsigned long>(data.cascade_depth);
        obj->tree_depth = static_cast<unsigned long>(data.tree_depth);
        obj->num_trees_per_cascade_level = static_cast<unsigned long>(data.num_trees_per_cascade_level);
        obj->learning_rate = data.learning_rate;
        obj->oversampling_amount = static_cast<unsigned long>(data.oversampling_amount);
        obj->num_test_coordinates = static_cast<unsigned long>(data.num_test_coordinates);
        obj->lambda = data.lambda;
        obj->num_test_splits = static_cast<unsigned long>(data.num_test_splits);
        obj->configfile = configFile;
    });
}