src/OpenCvSharp/Internal/PInvoke/NativeMethods/face/NativeMethods_face_Facemark.cs


    // callback is a function pointer to a static, [UnmanagedCallersOnly] trampoline (see
    // FacemarkFaceDetectorBridge); userData is a GCHandle to the context rooting the real managed
    // detector, round-tripped opaquely through callbackData/face_Facemark_faceDetectorThunk.
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus face_FacemarkKazemi_setFaceDetector(
        OpenCvSafeHandle obj, IntPtr callback, IntPtr userData,
        out IntPtr callbackData, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus face_FacemarkFaceDetectorCallbackData_delete(IntPtr callbackData);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus face_FacemarkKazemi_Params_new(out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus face_FacemarkKazemi_Params_delete(IntPtr obj);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus face_FacemarkKazemi_Params_getAll(
        IntPtr obj, out FacemarkKazemiParamsData data, IntPtr configFile);

    [LibraryImport(DllExtern, StringMarshalling = StringMarshalling.Utf8), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus face_FacemarkKazemi_Params_setAll(
        IntPtr obj, FacemarkKazemiParamsData data, string configFile);

    #endregion
}
